test_data/valid/1.1_stacked_bricks.ldr
0 Stacked bricks
1 4 0 -24 0 1 0 0 0 1 0 0 0 1 3001.dat
1 15 0 -48 0 1 0 0 0 1 0 0 0 1 3001.dat