test_data/invalid/2.5_near_miss.ldr
0 Near miss
1 4 0 -24 0 1 0 0 0 1 0 0 0 1 3001.dat
1 15 10 -48 0 1 0 0 0 1 0 0 0 1 3001.dat